--- a/assets/style.css
+++ b/assets/style.css
@@ -206,6 +206,7 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
   position: absolute;
+  cursor: pointer;
 }
 #banner .arrow_left {
   left: 10px;
